# efficiency-6

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  structure.md
.github/workflows/: docker-image.yml
app/: main.py  settings.py
app/api/: api.py
app/api/endpoints/computer_information/: get_active_computer.py
app/api/endpoints/lua/: get_lua_file.py  list_files.py  post_lua_file.py
app/api/models/: detailed_error_response.py  error_response.py  file_create_response.py  file_get_response.py  file_list_response.py  file_response.py
lua_files/: test.lua
